fixed issue with long string bleeding width

--- a/src/styles/ChatInterface.scss
+++ b/src/styles/ChatInterface.scss
@@ -23,7 +23,8 @@
       .sent {
         background: dodgerblue;
         float: right;
-        flex-grow: wrap;
+        flex-wrap: wrap;
+        word-break: break-all;
         display: flex;
         margin-left: 4em;
         border-radius: 30px;
@@ -34,6 +35,7 @@
         background: mediumseagreen;
         float: left;
         flex-grow: wrap;
+        word-break: break-all;
         display: flex;
         margin-right: 4em;
         border-radius: 30px;
